# libaudiodecoder

./: .gitignore  CMakeLists.txt
include/: audiodecoder_c.h  audiodecoderbase.h  audiodecodercoreaudio.h
src/: audiodecoder_c.cpp
